--- a/privacidad.html
+++ b/privacidad.html
@@ -23,7 +23,7 @@
 
     <nav class="navconjunto">
         <ul>
-          <li><a href="Prototipo.html">Inicio</a></li>
+          <li><a href="index.html">Inicio</a></li>
           <li><a href="Servicios.html">Servicios</a></li>
           <li><a href="registro.html">Registro</a></li>
         </ul>
