--- a/registro.html
+++ b/registro.html
@@ -50,7 +50,7 @@
     <label for="">Problemas medicos:
       <input type="text">
     </label>
-    <button href="Prototipo.html" type="submit">Enviar</button>
+    <button href="index.html" type="submit">Enviar</button>
   </form>
     </main>
 
